Emotion 1.1.0

Changes since Emotion 1.0.0:
-------------------------

Additions:

Fixes:
	- build out of tree.

Improvements:

Removal:
