@@ -7,6 +7,7 @@ Additions:
 
 Fixes:
 	- build out of tree.
+	- stride of all YUV video.
 
 Improvements:
 
